--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "angular-animate": "^1.5.5",
     "angular-jwt": "^0.0.9",
     "angular-i18n": "^1.5.5",
-    "angular-loading-bar": "^0.9.0"
+    "angular-loading-bar": "^0.9.0",
+    "angular-bootstrap": "~1.3.2"
   }
 }
