--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-jwt": "^0.0.9",
     "angular-i18n": "^1.5.5",
     "angular-loading-bar": "^0.9.0",
-    "angular-bootstrap": "~1.3.2"
+    "angular-bootstrap": "~1.3.2",
+    "ng-file-upload": "~12.0.4"
   }
 }
