--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "postinstall":"bower install"
+    "postinstall": "bower install"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "connect-multiparty": "^2.0.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
     "pg": "^4.4.2",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^3.9.0"
+    "sequelize": "^3.9.0",
+    "serve-favicon": "~2.3.0",
+    "jsonwebtoken": "^5.0.5",
+    "sequelize-fixtures": "^0.5.1",
+    "crypto": "0.0.3"
   }
 }
